k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: slp-frontend
  template:
    metadata:
      labels:
        app: slp-frontend
    spec:
      containers:
        - name: frontend
          image: manoj/student-loan-portal-frontend:latest
          ports:
            - containerPort: 80
