k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slp-ingress
spec:
  rules:
    - host: studentloan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slp-frontend
                port:
                  number: 80
